hamburger button fixed

--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,7 @@ body{
 }
 
 .active{
-	filter: blur(2px) brightness(45%);
+	filter: blur(2px) brightness(65%);
 	transition: all 300ms ease;
 }
 
@@ -278,7 +278,7 @@ body{
 		width: 2rem;
 		z-index: 9999;
 		aspect-ratio: 1;
-		top: 1.25rem;
+		top: 2rem;
 		right: 2rem;
 		transition: all 250ms ease;
 		background-image: url(./assets/images/icon-menu.svg);
@@ -289,7 +289,8 @@ body{
 	.hambgrbtn[aria-expanded="true"]{
 		transition: all 250ms ease;
 		background-image: url(./assets/images/icon-menu-close.svg);
-		width: 2.2rem;
+		width: 2.12rem;
+		background-size: cover;
 		position: fixed;
 	}
 
